sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value i
    for (i<-0 to getValueCount()-2-i){
                                   ^