sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var swapped=false
  do{
    swapped=false
    for (i<-0 to getValueCount()-2-i){
      if (!isSmaller(i,i+1)){
        swap(i,i+1)
        swapped=true
      }
    }
  } while(swapped)
}